<resources>
    <string name="app_name">RtmpPublisher</string>
    <string name="publishing_label">LIVE  %1$s:%2$s</string>

    <string name="start_publishing">Publish</string>
    <string name="stop_publishing">Stop</string>
    <string name="started_publishing">Publishing Started</string>
    <string name="stopped_publishing">Publishing Stopped</string>
    <string name="disconnected_publishing">Publishing Disconnected</string>
    <string name="failed_publishing">Failed To Connect</string>

    <string name="start_pulling">Pull</string>
    <string name="stop_pulling">Stop</string>
    <string name="started_pulling">Pulling Started</string>
    <string name="stopped_pulling">Pulling Stopped</string>
    <string name="disconnected_pulling">Pulling Disconnected</string>
    <string name="failed_pulling">Failed To Connect</string>

    <string name="error_empty_url">url is empty</string>
    <string name="back">返回</string>

    <string name="url_publish">rtmp://47.106.33.6:9935/test/wxy</string>
    <string name="url_pull">rtmp://47.106.33.6:9935/test/wxy</string>

    <string name="head" translatable="false">头像</string>
    <string name="tel_callee_hint" translatable="false">邀请你语音通话</string>
    <string name="tel_caller_hint" translatable="false">正在等待对方接受邀请...</string>
    <string name="tel_calling_time" translatable="false">%1$s:%2$s</string>
    <string name="tel_mute" translatable="false">静音</string>
    <string name="tel_hands_free" translatable="false">免提</string>
    <string name="tel_hangup" translatable="false">挂断</string>
    <string name="tel_callee_pickup" translatable="false">接听</string>
    <string name="network_unavailable" translatable="false">网络连接失败！</string>
    <string name="request_failed" translatable="false">服务器不给力了,过一会儿再试试。</string>
    <string name="unknownError" translatable="false">未知错误</string>

</resources>
