<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/tv_url_publish"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/url_publish"
            android:textSize="18sp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/tv_url_pull"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_url_publish"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:text="@string/url_pull"
            android:textSize="18sp"
            android:visibility="visible" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/ll_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_top"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/toggle_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/round_corner_white"
            android:layout_marginLeft="50dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/start_publishing" />

        <Button
            android:id="@+id/toggle_go_pull"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/round_corner_white"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/start_pulling" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_log"
        android:layout_width="fill_parent"
        android:layout_height="420dp"
        android:layout_below="@+id/ll_button"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:textSize="16sp"
        android:visibility="visible" />


</RelativeLayout>
