<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_black"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_collapse"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="11dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_collapse"
        android:visibility="invisible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_collapse"
        android:layout_marginTop="79dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:id="@+id/ll_caller_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">
            <!--android:background="@color/white"-->

            <ImageView
                android:id="@+id/iv_caller_head"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@color/white"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_head" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_caller_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_caller_head"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="35dp"
            android:text="@string/head"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_call_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_caller_name"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="25dp"
            android:text="@string/tel_caller_hint"
            android:textColor="@color/gray_hint_text"
            android:textSize="14sp" />

    </RelativeLayout>

    <!--测试用-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_above="@+id/tv_calling_time"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="250dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/tv_test_subtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="35dp"
            android:text="➖"
            android:textColor="@color/white"
            android:textSize="48sp" />


        <EditText
            android:id="@+id/tv_test_did"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="35dp"
            android:inputType="number"
            android:text="2475"
            android:textColor="@color/white"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/tv_test_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="25dp"
            android:text="➕"
            android:textColor="@color/gray_hint_text"
            android:textSize="48sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_calling_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/rl_operate"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="50dp"
        android:text="@string/tel_calling_time"
        android:textColor="@color/gray_hint_text"
        android:textSize="14sp" />

    <RelativeLayout
        android:id="@+id/rl_operate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="34dp"
        android:paddingLeft="44dp"
        android:paddingRight="44dp">

        <!--静音-->
        <LinearLayout
            android:id="@+id/ll_mute"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/iv_mute"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_mute" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tel_mute"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <!--挂断，中间和左侧，默认中间-->
        <LinearLayout
            android:id="@+id/ll_hangup"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_hang_up" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tel_hangup"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <!--接听 - 右侧-->
        <LinearLayout
            android:id="@+id/ll_callee_pickup"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_callee_pickup" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tel_callee_pickup"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <!--免提，右侧-->
        <LinearLayout
            android:id="@+id/ll_hands_free"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/iv_hands_free"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:alpha="0.2"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_hands_free_pressed" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tel_hands_free"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>